fix footer, add hr page 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2456,11 +2456,13 @@ button.home {
   transition: 0.5s !important;
   padding: 0.5rem 1rem !important;
   margin-right: 24px;
+  color: white !important;
 }
 
 .s-border-reverse:hover {
   box-shadow: inset -6em 0 0 0 white, inset 6em 0 0 0 white !important;
   border: 3px solid #ba1d24 !important;
+  color: #444444 !important;
 }
 
 .s-border-reverse a {
@@ -2484,214 +2486,3 @@ button.home {
   
 } */
 /* end fix button header */
-/* hr.html */
-/* hr-introduction component */
-.r-square {
-  width: 24px;
-  height: 24px;
-  background: #ba1d24;
-  position: absolute;
-  margin-top: 6px;
-}
-
-.r-text {
-  position: relative;
-  margin-left: 32px;
-  text-transform: uppercase;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 30px;
-  letter-spacing: var(--letter-style);
-  color: #333333;
-}
-.hr-intro {
-  margin: 64px 0 64px 0;
-}
-.hr-des {
-  margin-top: 49px;
-}
-.hr-boxes {
-  margin-top: 50px;
-}
-.hr-box_contain {
-  min-width: 200px;
-  width: 85%;
-}
-
-.hr-box_h3 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 20px;
-  color: #5c5c5c;
-  margin: 2rem 0 1.5rem 0;
-}
-.hr-box_p {
-  text-align: justify;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 18px;
-  letter-spacing: -0.015em;
-  color: #5c5c5c;
-}
-@media (max-width: 576px) {
-  .hr-box_contain {
-    margin: 0 auto;
-    width: 70%;
-    margin-bottom: 30px;
-  }
-  .hr-box_contain > img {
-    max-width: 220px;
-  }
-}
-/* end hr-introduction component */
-/* hr-support */
-.hr-support {
-  margin: 64px 0 64px 0;
-}
-.hr-support_des {
-  margin: 56px 0 56px 0;
-}
-.hr-support_image {
-  margin-bottom: 120px;
-}
-/* end hr-support */
-
-/* aboutHRMarketing */
-.aboutHRMarketing {
-  margin-top: 120px;
-}
-.aboutHRMarketing-link {
-}
-.aboutHRMarketing-linktag {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 18px;
-  letter-spacing: -0.015em;
-  text-decoration-line: underline;
-  color: #ba1d24;
-}
-/* aboutHRMarketing-Img */
-.aboutHRMarketing-Img {
-  width: 178px;
-  height: 59px;
-  margin-bottom: 16px;
-}
-/* end aboutHRMarketing-Img */
-.aboutHRMarketing-member_p {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 20px;
-  letter-spacing: -0.015em;
-  color: #5c5c5c;
-  margin: 40px 0;
-}
-.aboutPRO {
-  margin-top: 120px;
-}
-/* end aboutHRMarketing */
-
-/* cm-title-pattern */
-.cm-title-pattern h2 {
-  text-align: center;
-  margin: 0;
-  position: relative;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 20px;
-  letter-spacing: var(--letter-style);
-  color: #5c5c5c;
-}
-
-.cm-title-pattern h2::before,
-.cm-title-pattern h2::after {
-  content: "";
-  display: inline-block;
-  border-top: 0.1rem solid #ba1d24;
-  width: 20px;
-  top: 40%;
-  position: absolute;
-}
-
-.cm-title-pattern h2::before {
-  margin-left: -2rem;
-}
-
-.cm-title-pattern h2::after {
-  margin: 0 1rem;
-}
-.cm-title-pattern p {
-  margin: 66px 0;
-}
-/* end cm-title-pattern */
-
-/* Temporary Staffing */
-.hr-staff {
-  background: rgb(245 245 245);
-  padding: 56px 0 16px 0;
-}
-.hr-staff_p {
-  margin-top: 56px;
-}
-/* End Temporary Staffing */
-
-/* Consulting */
-.hr-consult {
-  padding: 56px 0;
-}
-/* End Consulting */
-
-/* About HR2 */
-.hr-about {
-  padding: 56px 0;
-  background: rgb(245 245 245);
-}
-.hr-about_img {
-  padding: 0 15px 0 15px;
-}
-/* End  About HR2 */
-
-/* Members */
-.hr-members_title {
-  margin-bottom: 56px;
-}
-.hr-members {
-  margin: 56px 0 56px 0;
-  color: #000000;
-}
-.hr-members_contain {
-  min-width: 200px;
-  width: 85%;
-}
-.hr-members_boxIem-position {
-  margin: 16px 0 16px 0;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 14px;
-}
-.hr-members_boxIem-name {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 20px;
-  margin-bottom: 8px;
-}
-@media (max-width: 576px) {
-  .hr-members_contain {
-    margin: 0 auto;
-    width: 70%;
-    margin-bottom: 30px;
-  }
-  .hr-members_contain > img {
-    max-width: 220px;
-  }
-}
-/* End Members */
-
-/* end hr.html */
