--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,8 @@ a:hover {
 .s-border:hover {
   box-shadow: inset -6em 0 0 0 #ba1d24, inset 6em 0 0 0 #ba1d24;
   color: #fff;
+  font-weight: 700 !important;
+  font-size: 14px !important;
 }
 
 .fz-12 {
